// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RedditAdder/> should have <ErrorMessage> if error is not empty string 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RedditAdder
    clearError={[MockFunction]}
    error="error"
    handleChange={[MockFunction]}
    handleOpenSettingsModal={[MockFunction]}
    handleSubmit={[MockFunction]}
    value=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="input-group"
        >
          <input
            className="form-control"
            onChange={[MockFunction]}
            placeholder="Type the subreddit you want to add ex: 'worldnews'"
            type="text"
            value=""
          />
          <span
            className="input-group-btn"
          >
            <button
              className="btn btn-default"
              style={
                Object {
                  "border": "1px solid #cccccc",
                }
              }
              type="submit"
            >
              <span
                className="glyphicon glyphicon-plus"
              />
            </button>
            <button
              className="btn btn-default"
              onClick={[MockFunction]}
              style={
                Object {
                  "border": "1px solid #cccccc",
                  "borderLeft": "0px",
                }
              }
              type="button"
            >
              <span
                className="glyphicon glyphicon-cog"
              />
            </button>
          </span>
        </div>,
        <ErrorMessage
          clearError={[MockFunction]}
          message="error"
        />,
      ],
      "onSubmit": [MockFunction],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <input
              className="form-control"
              onChange={[MockFunction]}
              placeholder="Type the subreddit you want to add ex: 'worldnews'"
              type="text"
              value=""
            />,
            <span
              className="input-group-btn"
            >
              <button
                className="btn btn-default"
                style={
                  Object {
                    "border": "1px solid #cccccc",
                  }
                }
                type="submit"
              >
                <span
                  className="glyphicon glyphicon-plus"
                />
              </button>
              <button
                className="btn btn-default"
                onClick={[MockFunction]}
                style={
                  Object {
                    "border": "1px solid #cccccc",
                    "borderLeft": "0px",
                  }
                }
                type="button"
              >
                <span
                  className="glyphicon glyphicon-cog"
                />
              </button>
            </span>,
          ],
          "className": "input-group",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "form-control",
              "onChange": [MockFunction],
              "placeholder": "Type the subreddit you want to add ex: 'worldnews'",
              "type": "text",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <button
                  className="btn btn-default"
                  style={
                    Object {
                      "border": "1px solid #cccccc",
                    }
                  }
                  type="submit"
                >
                  <span
                    className="glyphicon glyphicon-plus"
                  />
                </button>,
                <button
                  className="btn btn-default"
                  onClick={[MockFunction]}
                  style={
                    Object {
                      "border": "1px solid #cccccc",
                      "borderLeft": "0px",
                    }
                  }
                  type="button"
                >
                  <span
                    className="glyphicon glyphicon-cog"
                  />
                </button>,
              ],
              "className": "input-group-btn",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <span
                    className="glyphicon glyphicon-plus"
                  />,
                  "className": "btn btn-default",
                  "style": Object {
                    "border": "1px solid #cccccc",
                  },
                  "type": "submit",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "glyphicon glyphicon-plus",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "span",
                },
                "type": "button",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <span
                    className="glyphicon glyphicon-cog"
                  />,
                  "className": "btn btn-default",
                  "onClick": [MockFunction],
                  "style": Object {
                    "border": "1px solid #cccccc",
                    "borderLeft": "0px",
                  },
                  "type": "button",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "glyphicon glyphicon-cog",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "span",
                },
                "type": "button",
              },
            ],
            "type": "span",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "clearError": [MockFunction],
          "message": "error",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "form",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="input-group"
          >
            <input
              className="form-control"
              onChange={[MockFunction]}
              placeholder="Type the subreddit you want to add ex: 'worldnews'"
              type="text"
              value=""
            />
            <span
              className="input-group-btn"
            >
              <button
                className="btn btn-default"
                style={
                  Object {
                    "border": "1px solid #cccccc",
                  }
                }
                type="submit"
              >
                <span
                  className="glyphicon glyphicon-plus"
                />
              </button>
              <button
                className="btn btn-default"
                onClick={[MockFunction]}
                style={
                  Object {
                    "border": "1px solid #cccccc",
                    "borderLeft": "0px",
                  }
                }
                type="button"
              >
                <span
                  className="glyphicon glyphicon-cog"
                />
              </button>
            </span>
          </div>,
          <ErrorMessage
            clearError={[MockFunction]}
            message="error"
          />,
        ],
        "onSubmit": [MockFunction],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <input
                className="form-control"
                onChange={[MockFunction]}
                placeholder="Type the subreddit you want to add ex: 'worldnews'"
                type="text"
                value=""
              />,
              <span
                className="input-group-btn"
              >
                <button
                  className="btn btn-default"
                  style={
                    Object {
                      "border": "1px solid #cccccc",
                    }
                  }
                  type="submit"
                >
                  <span
                    className="glyphicon glyphicon-plus"
                  />
                </button>
                <button
                  className="btn btn-default"
                  onClick={[MockFunction]}
                  style={
                    Object {
                      "border": "1px solid #cccccc",
                      "borderLeft": "0px",
                    }
                  }
                  type="button"
                >
                  <span
                    className="glyphicon glyphicon-cog"
                  />
                </button>
              </span>,
            ],
            "className": "input-group",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "form-control",
                "onChange": [MockFunction],
                "placeholder": "Type the subreddit you want to add ex: 'worldnews'",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <button
                    className="btn btn-default"
                    style={
                      Object {
                        "border": "1px solid #cccccc",
                      }
                    }
                    type="submit"
                  >
                    <span
                      className="glyphicon glyphicon-plus"
                    />
                  </button>,
                  <button
                    className="btn btn-default"
                    onClick={[MockFunction]}
                    style={
                      Object {
                        "border": "1px solid #cccccc",
                        "borderLeft": "0px",
                      }
                    }
                    type="button"
                  >
                    <span
                      className="glyphicon glyphicon-cog"
                    />
                  </button>,
                ],
                "className": "input-group-btn",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <span
                      className="glyphicon glyphicon-plus"
                    />,
                    "className": "btn btn-default",
                    "style": Object {
                      "border": "1px solid #cccccc",
                    },
                    "type": "submit",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "glyphicon glyphicon-plus",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "span",
                  },
                  "type": "button",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <span
                      className="glyphicon glyphicon-cog"
                    />,
                    "className": "btn btn-default",
                    "onClick": [MockFunction],
                    "style": Object {
                      "border": "1px solid #cccccc",
                      "borderLeft": "0px",
                    },
                    "type": "button",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "glyphicon glyphicon-cog",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "span",
                  },
                  "type": "button",
                },
              ],
              "type": "span",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "clearError": [MockFunction],
            "message": "error",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "form",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "prevContext": true,
          },
        },
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`<RedditAdder/> should render correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RedditAdder
    clearError={[MockFunction]}
    error=""
    handleChange={[MockFunction]}
    handleOpenSettingsModal={[MockFunction]}
    handleSubmit={[MockFunction]}
    value=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="input-group"
        >
          <input
            className="form-control"
            onChange={[MockFunction]}
            placeholder="Type the subreddit you want to add ex: 'worldnews'"
            type="text"
            value=""
          />
          <span
            className="input-group-btn"
          >
            <button
              className="btn btn-default"
              style={
                Object {
                  "border": "1px solid #cccccc",
                }
              }
              type="submit"
            >
              <span
                className="glyphicon glyphicon-plus"
              />
            </button>
            <button
              className="btn btn-default"
              onClick={[MockFunction]}
              style={
                Object {
                  "border": "1px solid #cccccc",
                  "borderLeft": "0px",
                }
              }
              type="button"
            >
              <span
                className="glyphicon glyphicon-cog"
              />
            </button>
          </span>
        </div>,
        null,
      ],
      "onSubmit": [MockFunction],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <input
              className="form-control"
              onChange={[MockFunction]}
              placeholder="Type the subreddit you want to add ex: 'worldnews'"
              type="text"
              value=""
            />,
            <span
              className="input-group-btn"
            >
              <button
                className="btn btn-default"
                style={
                  Object {
                    "border": "1px solid #cccccc",
                  }
                }
                type="submit"
              >
                <span
                  className="glyphicon glyphicon-plus"
                />
              </button>
              <button
                className="btn btn-default"
                onClick={[MockFunction]}
                style={
                  Object {
                    "border": "1px solid #cccccc",
                    "borderLeft": "0px",
                  }
                }
                type="button"
              >
                <span
                  className="glyphicon glyphicon-cog"
                />
              </button>
            </span>,
          ],
          "className": "input-group",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "form-control",
              "onChange": [MockFunction],
              "placeholder": "Type the subreddit you want to add ex: 'worldnews'",
              "type": "text",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <button
                  className="btn btn-default"
                  style={
                    Object {
                      "border": "1px solid #cccccc",
                    }
                  }
                  type="submit"
                >
                  <span
                    className="glyphicon glyphicon-plus"
                  />
                </button>,
                <button
                  className="btn btn-default"
                  onClick={[MockFunction]}
                  style={
                    Object {
                      "border": "1px solid #cccccc",
                      "borderLeft": "0px",
                    }
                  }
                  type="button"
                >
                  <span
                    className="glyphicon glyphicon-cog"
                  />
                </button>,
              ],
              "className": "input-group-btn",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <span
                    className="glyphicon glyphicon-plus"
                  />,
                  "className": "btn btn-default",
                  "style": Object {
                    "border": "1px solid #cccccc",
                  },
                  "type": "submit",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "glyphicon glyphicon-plus",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "span",
                },
                "type": "button",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <span
                    className="glyphicon glyphicon-cog"
                  />,
                  "className": "btn btn-default",
                  "onClick": [MockFunction],
                  "style": Object {
                    "border": "1px solid #cccccc",
                    "borderLeft": "0px",
                  },
                  "type": "button",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "glyphicon glyphicon-cog",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "span",
                },
                "type": "button",
              },
            ],
            "type": "span",
          },
        ],
        "type": "div",
      },
      null,
    ],
    "type": "form",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="input-group"
          >
            <input
              className="form-control"
              onChange={[MockFunction]}
              placeholder="Type the subreddit you want to add ex: 'worldnews'"
              type="text"
              value=""
            />
            <span
              className="input-group-btn"
            >
              <button
                className="btn btn-default"
                style={
                  Object {
                    "border": "1px solid #cccccc",
                  }
                }
                type="submit"
              >
                <span
                  className="glyphicon glyphicon-plus"
                />
              </button>
              <button
                className="btn btn-default"
                onClick={[MockFunction]}
                style={
                  Object {
                    "border": "1px solid #cccccc",
                    "borderLeft": "0px",
                  }
                }
                type="button"
              >
                <span
                  className="glyphicon glyphicon-cog"
                />
              </button>
            </span>
          </div>,
          null,
        ],
        "onSubmit": [MockFunction],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <input
                className="form-control"
                onChange={[MockFunction]}
                placeholder="Type the subreddit you want to add ex: 'worldnews'"
                type="text"
                value=""
              />,
              <span
                className="input-group-btn"
              >
                <button
                  className="btn btn-default"
                  style={
                    Object {
                      "border": "1px solid #cccccc",
                    }
                  }
                  type="submit"
                >
                  <span
                    className="glyphicon glyphicon-plus"
                  />
                </button>
                <button
                  className="btn btn-default"
                  onClick={[MockFunction]}
                  style={
                    Object {
                      "border": "1px solid #cccccc",
                      "borderLeft": "0px",
                    }
                  }
                  type="button"
                >
                  <span
                    className="glyphicon glyphicon-cog"
                  />
                </button>
              </span>,
            ],
            "className": "input-group",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "form-control",
                "onChange": [MockFunction],
                "placeholder": "Type the subreddit you want to add ex: 'worldnews'",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <button
                    className="btn btn-default"
                    style={
                      Object {
                        "border": "1px solid #cccccc",
                      }
                    }
                    type="submit"
                  >
                    <span
                      className="glyphicon glyphicon-plus"
                    />
                  </button>,
                  <button
                    className="btn btn-default"
                    onClick={[MockFunction]}
                    style={
                      Object {
                        "border": "1px solid #cccccc",
                        "borderLeft": "0px",
                      }
                    }
                    type="button"
                  >
                    <span
                      className="glyphicon glyphicon-cog"
                    />
                  </button>,
                ],
                "className": "input-group-btn",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <span
                      className="glyphicon glyphicon-plus"
                    />,
                    "className": "btn btn-default",
                    "style": Object {
                      "border": "1px solid #cccccc",
                    },
                    "type": "submit",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "glyphicon glyphicon-plus",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "span",
                  },
                  "type": "button",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <span
                      className="glyphicon glyphicon-cog"
                    />,
                    "className": "btn btn-default",
                    "onClick": [MockFunction],
                    "style": Object {
                      "border": "1px solid #cccccc",
                      "borderLeft": "0px",
                    },
                    "type": "button",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "glyphicon glyphicon-cog",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "span",
                  },
                  "type": "button",
                },
              ],
              "type": "span",
            },
          ],
          "type": "div",
        },
        null,
      ],
      "type": "form",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "prevContext": true,
          },
        },
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
